--- a/Example/LITLightweightStore/Main.storyboard
+++ b/Example/LITLightweightStore/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="whP-gf-Uak">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,8 +16,93 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input something" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M8f-EY-fAF">
+                                <rect key="frame" x="237" y="20" width="126" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uew-zT-Zhy">
+                                <rect key="frame" x="270" y="455" width="60" height="30"/>
+                                <state key="normal" title="Reset All">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetAll:" destination="whP-gf-Uak" eventType="touchUpInside" id="EYp-xC-pSJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8J7-yK-X3S">
+                                <rect key="frame" x="241" y="72" width="117" height="30"/>
+                                <state key="normal" title="Copy To Memory">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="copyToMemory:" destination="whP-gf-Uak" eventType="touchUpInside" id="SHF-fy-Juo"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Defaults" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Jh-AF-vG9">
+                                <rect key="frame" x="268" y="246" width="64" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Memory" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdP-0E-poj">
+                                <rect key="frame" x="268" y="206" width="63" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MVh-sK-dFj">
+                                <rect key="frame" x="241" y="110" width="118" height="30"/>
+                                <state key="normal" title="Copy To Defaults">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="copyToDefaults:" destination="whP-gf-Uak" eventType="touchUpInside" id="cpf-Ux-sUP"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keychain" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBs-Z3-PcI">
+                                <rect key="frame" x="265" y="288" width="69" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTY-Hf-1CC">
+                                <rect key="frame" x="239" y="148" width="123" height="30"/>
+                                <state key="normal" title="Copy To Keychain">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="copyToKeychain:" destination="whP-gf-Uak" eventType="touchUpInside" id="RTH-WC-6NC"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MVh-sK-dFj" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="2d5-fd-HZe"/>
+                            <constraint firstItem="WBs-Z3-PcI" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="5Zj-du-82c"/>
+                            <constraint firstItem="8J7-yK-X3S" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="87U-f1-WLw"/>
+                            <constraint firstItem="Uew-zT-Zhy" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="9vX-I0-asj"/>
+                            <constraint firstItem="M8f-EY-fAF" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="FqJ-Q2-bp8"/>
+                            <constraint firstItem="Mvr-aV-6Um" firstAttribute="top" secondItem="Uew-zT-Zhy" secondAttribute="bottom" constant="115" id="KqF-bi-hDd"/>
+                            <constraint firstItem="pdP-0E-poj" firstAttribute="top" secondItem="KTY-Hf-1CC" secondAttribute="bottom" constant="28" id="LRN-vj-STw"/>
+                            <constraint firstItem="pdP-0E-poj" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="NYq-BW-hcI"/>
+                            <constraint firstItem="6Jh-AF-vG9" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="YkH-0e-erI"/>
+                            <constraint firstItem="MVh-sK-dFj" firstAttribute="top" secondItem="8J7-yK-X3S" secondAttribute="bottom" constant="8" id="pYf-8g-sYp"/>
+                            <constraint firstItem="8J7-yK-X3S" firstAttribute="top" secondItem="M8f-EY-fAF" secondAttribute="bottom" constant="22" id="rLb-Gp-udd"/>
+                            <constraint firstItem="M8f-EY-fAF" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" id="u7Z-tH-3Gk"/>
+                            <constraint firstItem="6Jh-AF-vG9" firstAttribute="top" secondItem="pdP-0E-poj" secondAttribute="bottom" constant="19" id="u9l-vG-NOa"/>
+                            <constraint firstItem="WBs-Z3-PcI" firstAttribute="top" secondItem="6Jh-AF-vG9" secondAttribute="bottom" constant="21" id="xsA-ki-CVd"/>
+                            <constraint firstItem="KTY-Hf-1CC" firstAttribute="centerX" secondItem="M8f-EY-fAF" secondAttribute="centerX" id="y0G-kR-bXO"/>
+                            <constraint firstItem="KTY-Hf-1CC" firstAttribute="top" secondItem="MVh-sK-dFj" secondAttribute="bottom" constant="8" id="yDE-Wm-ctl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="defaultsLabel" destination="6Jh-AF-vG9" id="xPw-9u-lYO"/>
+                        <outlet property="keychainLabel" destination="WBs-Z3-PcI" id="exm-uk-YMc"/>
+                        <outlet property="memoryLabel" destination="pdP-0E-poj" id="8P8-EF-a97"/>
+                        <outlet property="textField" destination="M8f-EY-fAF" id="GyG-7w-v5z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
